Offer removed notice and stop acceptance of removed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1184,6 +1184,11 @@ a.yoomee-logo {
   font-size: 13px;
   margin-left: 10px;
 }
+
+.need-post .post-action.offer-removed{
+  color:red;
+}
+
 .need-posts .comments {
   width: 475px;
   float: right;
