--- a/app/views/neighbourhoods/_details_modal.html.haml
+++ b/app/views/neighbourhoods/_details_modal.html.haml
@@ -4,7 +4,7 @@
     -if resource.is_a?(Need)
       =link_to "Need #{resource.id}", resource
     -elsif resource.is_a?(Offer)
-      =link_to "Offer #{resource.id}", resource
+      =link_to "Offer #{resource.id}", resource.need
     -else
       =link_to "General Offer #{resource.id}", resource
   %h2=link_to resource.user.full_name, resource.user
