Change copy for posting to needs

--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -5,4 +5,4 @@
     =form.inputs do
       =form.input :text, :label => false, :input_html => {:rows => 1, :placeholder => "Write a comment...", :id => "", :class => "autogrow-short"}
       
-    =form.commit_button "Post", :button_html => { :class => "btn-primary btn-mini pull-right mt-1" }
+    =form.commit_button "Send", :button_html => { :class => "btn-primary btn-mini pull-right mt-1" }
