--- a/app/views/offers/index.html.haml
+++ b/app/views/offers/index.html.haml
@@ -3,11 +3,24 @@
     %h1
       My offers
       %small (These conversations are NOT visible to the public)
-    -if @offers.empty?
+    -if @offers.empty? && @chats.empty?
       Your haven't offered to help anyone yet. Click
       =link_to("here",new_general_offer_path)
       to see who you could help.
     -else
+      -if @chats.present?
+        %h3 Offers you're chatting about
+        %ul.nav.nav-tabs.nav-stacked
+          -@chats.order("created_at DESC").reject{ |i| i.offers.select{|o| o.accepted?}.present? }.each do |need|
+            %li
+              =link_to need do
+                .list-image{:rel => 'tooltip', :title => user_address_tooltip(need.user)}
+                  =image_for_with_validation(need.user, "60x50#")
+                  %p.small-text=need.user
+                %h3=need.title
+                %h5.needs-description=truncate(need.description, :length =>95)
+                %p
+                  =messages_badge(current_user.new_notification_count("my_offers", need))
       %h3 Open offers
       %ul.nav.nav-tabs.nav-stacked
         -@offers.order("created_at DESC").reject{ |i| i.accepted? }.each do |offer|
