--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -96,7 +96,7 @@
       .row
         .span6
           %ul.unstyled.need-posts.mt-2
-            -if can?(:create, Post) && @chat
+            -if can?(:create, Post) && @chat && @need.user != current_user
               =render("posts/remote_form", :post => current_user.posts.build(:target => @need, :context => 'chat'))
             =render(:partial => "needs/post", :collection => @need.posts_viewable_by(current_user).order("created_at DESC"))
     .span4
