Change 'Send' buttons loading text to 'Sending'

--- a/app/views/posts/_remote_form.html.haml
+++ b/app/views/posts/_remote_form.html.haml
@@ -6,4 +6,4 @@
       =form.input :context, :as => :hidden
       .fake-textarea
         =form.input :text, :label => false, :input_html => {:rows => 3, :placeholder => "Write your private message"}
-      =form.commit_button "Send", :button_html => {:class => "pull-right btn-primary", :"data-loading-text" => "Posting..."}
+      =form.commit_button "Send", :button_html => {:class => "pull-right btn-primary", :"data-loading-text" => "Sending..."}
