--- a/app/views/pre_registrations/about.html.haml
+++ b/app/views/pre_registrations/about.html.haml
@@ -96,7 +96,7 @@
           -elsif current_user.try(:role) !=  ("pre_registration" || "group_user")
             =link_to_slug "Get involved", :get_involved, :class=>"cta-intro"          
           -else
-            =link_to "Complete your registration", new_registration_path, :class=>"cta-intro", :"data-toggle"=>"modal"
+            =link_to "Complete your registration", new_registration_path, :class=>"cta-intro"
           .clearfix
         =link_to "Top", "#top", :class=>"to-top-link"
 
