--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -51,7 +51,7 @@
     .modal-body
       %p
         You haven't fully registered yet.
-      =link_to "Find out more about registration", about_pre_registrations_path, :class => "cta-intro not-fully-registered-next"
+      =link_to "Complete your registration", new_registration_path, :class => "cta-intro not-fully-registered-next"
 
 .container
   =render('home/cycled_columns')
