--- a/app/views/posts/_community_remote_form.html.haml
+++ b/app/views/posts/_community_remote_form.html.haml
@@ -4,7 +4,7 @@
       =form.input :target_type, :as => :hidden
       =form.input :target_id, :as => :hidden
       .fake-textarea
-        =form.input :text, :label => false, :input_html => {:rows => 3, :placeholder => "Post something"}
+        =form.input :text, :label => false, :input_html => {:rows => 3, :placeholder => "Write something"}
         =form.input :tag_list, :label => "<i class='icon icon-tag'></i>".html_safe, :input_html => {:placeholder => "Tags", :'data-autocomplete' => autocomplete_tags_path, :'data-delimiter' => ', '}, :wrapper_html => {:class => "post_tag_list_input"}
     .mt-1
       =form.input :retained_image, :as => :hidden
@@ -15,5 +15,5 @@
       =link_to("Add a photo", "#", :data => {:toggle => "collapse", :target => "#post_image_input", :parent => ".post_form"}, :class => "btn btn-small")
       =link_to("Add a video", "#", :data => {:toggle => "collapse", :target => "#post_video_url_input", :parent => ".post_form"}, :class => "btn btn-small")
       =link_to("Add a file", "#", :data => {:toggle => "collapse", :target => "#post_file_input", :parent => ".post_form"}, :class => "btn btn-small")
-      =form.commit_button "Post", :button_html => {:class => "pull-right btn-primary", :"data-loading-text" => "Posting..."}
-      =form.input :private, :wrapper_html => {:class => "post-private-checkbox pull-right", :rel => "tooltip", :title => "Only you and #{@champion.first_name} will this message"}, :label => "Private"
+      =form.commit_button "Send", :button_html => {:class => "pull-right btn-primary", :"data-loading-text" => "Sending..."}
+      =form.input :private, :wrapper_html => {:class => "post-private-checkbox pull-right", :rel => "tooltip", :title => "Only you and #{@champion.first_name} will see this message"}, :label => "Private"
