--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -5,4 +5,4 @@
     %b=comment.user
     =comment.text
     .small-info-text
-      =time_ago_in_words(comment.created_at) + " ago"
+      =time_ago_in_words(comment.created_at) + " ago (#{comment.created_at.strftime("%d/%m/%y")})"
